--- a/examinations/templates/examinations/base.html
+++ b/examinations/templates/examinations/base.html
@@ -28,7 +28,10 @@
         <button class="button-arounder" id="lower_limp">Пояс нижней конечности</button>
     </form>
     <form action="/other.html">
-        <button class="button-arounder" id="other">Другие</button>
+        <button class="button-arounder" id="chest">Грудь</button>
+    </form>
+    <form action="/other.html">
+        <button class="button-arounder" id="stomach">Живот</button>
     </form>
 </div>
 {% endblock %}
