--- a/examinations/templates/examinations/index.html
+++ b/examinations/templates/examinations/index.html
@@ -1,8 +1,6 @@
 {% extends 'examinations/base.html' %}
+<a name="top"></a>
 {% block content %}
-<div class="content">
-На данном ресурсе вы можете найти интересующее вас исследование с подробным описанием и иллюстрациями
-</div>
 <div>
     <ul>
     {% for e in exams %}
@@ -10,8 +8,9 @@
             <h2>{{ e.title }}</h2>
             <p>Область исследования: {{e.cat}} </p>
             <p>{{ e.content|linebreaks|truncatewords:75 }}</p>
-            <p><a href="{{ e.get_absolute_url }}">Подробнее</a></p>
+            <p><a class="more" href="{{ e.get_absolute_url }}">Подробнее</a></p>
         </li>
     {% endfor %}
     </ul>
+    <a class="to-top" href="#top">Наверх</a>
 {% endblock %}
