view classed added

--- a/examinations/templates/examinations/base.html
+++ b/examinations/templates/examinations/base.html
@@ -16,7 +16,7 @@
 {% block buttons %}
 <div class="buttonContainer">
     {% for m in menu %}
-        <a class="rainbow-button" href='#'>{{m}}</a>
+        <a class="rainbow-button" href='#'>{{m.title}}</a>
     {% endfor %}
 </div>
 <div class="buttonContainer">
