--- a/examinations/templates/examinations/exam.html
+++ b/examinations/templates/examinations/exam.html
@@ -4,7 +4,7 @@
 <h1>{{exam.title}}</h1>
 
 {% if exam.image %}
-<p><img src="{{exam.image.url}}"</p>
+<p><img align="left" class="img-article-left" src="{{exam.image.url}}"></p>
 {% endif %}
 
 {{exam.content|linebreaks}}
