--- a/examinations/static/examinations/css/index.css
+++ b/examinations/static/examinations/css/index.css
@@ -216,3 +216,9 @@ a {
 .to-top:hover:before{
 	transform: rotate(360deg);
 }
+.img-article-left {
+	max-width: 300px;
+	height: auto;
+	float: left;
+	padding: 0 10px 10px 0;
+}
