--- a/examinations/templates/examinations/addpage.html
+++ b/examinations/templates/examinations/addpage.html
@@ -1,6 +1,18 @@
 {% extends 'examinations/base.html' %}
 
 {% block content %}
-Add examination page
+<form action="{% url 'addpage' %}" method="post">
+    {% csrf_token %}
+
+    <div class="form_error">{{ form.non_field_errors }}</div> <!--не отображается-->
+    <div class="title">Добавление исследования</div>
+
+    {% for f in form %}
+        <p><label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}: </label>{{ f }}</p>
+    <div class="form-error">{{ form.title.errors }}</div>
+    {% endfor %}
+
+    <button type="submit">Добавить</button>
+</form>
 
 {% endblock %}
