--- a/examinations/static/examinations/css/index.css
+++ b/examinations/static/examinations/css/index.css
@@ -222,3 +222,14 @@ a {
 	float: left;
 	padding: 0 10px 10px 0;
 }
+.form-label {
+    display: inline-block;
+    min-width: 150px;
+    vertical-align: top;
+}
+
+.form-error ul {
+    list-style: none;
+    padding: 0;
+    color: #CC0000;
+}
