--- a/examinations/templates/examinations/addpage.html
+++ b/examinations/templates/examinations/addpage.html
@@ -4,12 +4,12 @@
 <form action="{% url 'addpage' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
-    <div class="form_error">{{ form.non_field_errors }}</div> <!--не отображается-->
+    <div class="form_error">{{ form.non_field_errors }}</div>
     <div class="title"><h2>Добавление исследования</h2></div>
 
     {% for f in form %}
         <p><label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}: </label>{{ f }}</p>
-    <div class="form-error">{{ form.title.errors }}</div>
+    <div class="form-error">{{ f.errors }}</div>
     {% endfor %}
 
     <button type="submit">Добавить</button>
