--- a/examinations/static/examinations/css/index.css
+++ b/examinations/static/examinations/css/index.css
@@ -75,6 +75,9 @@ button {
 }
 :root {
   --bg-color:#191919;
+  --clr-neon: rgba(235, 97, 143, 1);
+  --clr-bg: rgba(1, 1, 1, 1);
+  --clr-white: rgba(255, 255, 255, 1);
 }
 
 a {
@@ -232,4 +235,92 @@ a {
     list-style: none;
     padding: 0;
     color: #CC0000;
+}
+.nav_button {
+	font-size: 2em;
+
+	display: inline-block;
+	cursor: pointer;
+	text-decoration: none;
+	color: var(--clr-neon);
+	border: var(--clr-neon) 4px solid;
+	padding: 0.25em 1em;
+	border-radius: 0.25em;
+
+	text-shadow: 0 0 0.125em rgba(255, 255, 255, 0.55), 0 0 0.5em currentColor;
+
+	box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+
+	position: relative;
+}
+nav {
+	display: grid;
+	place-items: center;
+	font-family: system-ui;
+	color: var(--clr-neon);
+}
+.nav_button {
+	font-size: 1em;
+
+	display: inline-block;
+	cursor: pointer;
+	text-decoration: none;
+	color: var(--clr-neon);
+	border: var(--clr-neon) 4px solid;
+	padding: 0.25em 1em;
+	border-radius: 0.25em;
+
+	text-shadow: 0 0 0.125em rgba(255, 255, 255, 0.55), 0 0 0.5em currentColor;
+
+	box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+
+	position: relative;
+}
+.nav_button::before {
+	pointer-events: none;
+	content: "";
+	position: absolute;
+	background: var(--clr-neon);
+	top: 120%;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	transform: perspective(1.2em) rotateX(40deg) scale(1.5, 0.5);
+	filter: blur(1.15em);
+	opacity: 0.7;
+
+	transition: transform 0.5s linear;
+}
+
+.nav_button::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	box-shadow: 0 0 4em 0.6em var(--clr-neon), 0 0 1em 0.2em var(--clr-white);
+	opacity: 0;
+	background: var(--clr-neon);
+	z-index: -1;
+	transition: opacity 0.5s linear;
+}
+
+.nav_button:hover,
+.nav_button:focus {
+	color: var(--clr-bg);
+	text-shadow: none;
+}
+
+.nav_button:hover::before,
+.nav_button:focus::before {
+	opacity: 1;
+	transform: perspective(1em) rotateX(40deg) scale(1.5, 0.6);
+	transition: transform 0.5s linear;
+}
+
+.nav_button:hover::after,
+.nav_button:focus::after {
+	opacity: 1;
 }
