--- a/examinations/templates/examinations/base.html
+++ b/examinations/templates/examinations/base.html
@@ -18,6 +18,7 @@
     {% for m in menu %}
         <a class="rainbow-button" href="{% url m.url_name %}">{{m.title}}</a>
     {% endfor %}
+        <a class="rainbow-button" href="{% url 'register' %}">Регистрация</a>
 </div>
 <div class="buttonContainer">
     {% for c in cats %}
