--- a/examinations/templates/examinations/addpage.html
+++ b/examinations/templates/examinations/addpage.html
@@ -1,11 +1,11 @@
 {% extends 'examinations/base.html' %}
 
 {% block content %}
+<h1>{{title}}</h1>
 <form action="{% url 'addpage' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
     <div class="form_error">{{ form.non_field_errors }}</div>
-    <div class="title"><h2>Добавление исследования</h2></div>
 
     {% for f in form %}
         <p><label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}: </label>{{ f }}</p>
