--- a/examinations/templates/examinations/base.html
+++ b/examinations/templates/examinations/base.html
@@ -19,6 +19,7 @@
         <a class="rainbow-button" href="{% url m.url_name %}">{{m.title}}</a>
     {% endfor %}
         <a class="rainbow-button" href="{% url 'register' %}">Регистрация</a>
+        <a class="rainbow-button" href="{% url 'login' %}">Вход</a>
 </div>
 <div class="buttonContainer">
     {% for c in cats %}
