--- a/examinations/templates/examinations/login.html
+++ b/examinations/templates/examinations/login.html
@@ -10,6 +10,6 @@
     <p><label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}: {{f}}</label> </p>
     <div class="form-error">{{ f.errors }}</div>
   {% endfor %}
-  <button type="submit">Регистрация</button>
+  <button type="submit">Войти</button>
 </form>
 {% endblock %}
