--- a/examinations/static/examinations/css/index.css
+++ b/examinations/static/examinations/css/index.css
@@ -324,3 +324,13 @@ nav {
 .nav_button:focus::after {
 	opacity: 1;
 }
+.form-error {
+    list-style: none;
+    padding: 0;
+    color: #CC0000;
+}
+.form-label {
+    display: inline-block;
+    min-width: 150px;
+    vertical-align: top;
+}
