ref: api urls moved to apiv1.urls

--- a/examinations/templates/examinations/atlas_pdf.html
+++ b/examinations/templates/examinations/atlas_pdf.html
@@ -1,5 +1,9 @@
 {% load static %}
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title>Атлас</title>
+</head>
 <body>
 <style>
     .pdf-container {
